# frontend/swagger.json
@@ -1379,22 +1379,22 @@
           "content": {
             "application/json-patch+json": {
               "schema": {
-                "$ref": "#/components/schemas/UserDtoUserCredentialsDtoValueTuple"
+                "$ref": "#/components/schemas/CreateUserRequest"
               }
             },
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UserDtoUserCredentialsDtoValueTuple"
+                "$ref": "#/components/schemas/CreateUserRequest"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/UserDtoUserCredentialsDtoValueTuple"
+                "$ref": "#/components/schemas/CreateUserRequest"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/UserDtoUserCredentialsDtoValueTuple"
+                "$ref": "#/components/schemas/CreateUserRequest"
               }
             }
           }
@@ -1504,6 +1504,103 @@
           }
         }
       }
+    },
+    "/UserType/GetAllUserTypes": {
+      "get": {
+        "tags": [
+          "UserType"
+        ],
+        "operationId": "UserType_GetAllUserTypes",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PagedResult_UserTypeDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/UserType/GetUserTypeById": {
+      "get": {
+        "tags": [
+          "UserType"
+        ],
+        "operationId": "UserType_GetUserTypeById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserTypeDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserTypeDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserTypeDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/UserType/AddUserType": {
+      "post": {
+        "tags": [
+          "UserType"
+        ],
+        "operationId": "UserType_AddUserType",
+        "requestBody": {
+          "content": {
+            "application/json-patch+json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserTypeDto"
+              }
+            },
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserTypeDto"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserTypeDto"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserTypeDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1516,6 +1613,19 @@
           },
           "lessonDto": {
             "$ref": "#/components/schemas/LessonDto"
+          }
+        },
+        "additionalProperties": false
+      },
+      "CreateUserRequest": {
+        "type": "object",
+        "properties": {
+          "user": {
+            "$ref": "#/components/schemas/UserDto"
+          },
+          "password": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1810,6 +1920,33 @@
           }
         }
       },
+      "PagedResult_UserTypeDto": {
+        "type": "object",
+        "properties": {
+          "items": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/UserTypeDto"
+            }
+          },
+          "totalCount": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "pageSize": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "currentPage": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "totalPages": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
       "SettingsDto": {
         "type": "object",
         "properties": {
@@ -1982,10 +2119,6 @@
         "type": "object",
         "additionalProperties": false
       },
-      "UserDtoUserCredentialsDtoValueTuple": {
-        "type": "object",
-        "additionalProperties": false
-      },
       "UserFilter": {
         "type": "object",
         "properties": {
@@ -2026,6 +2159,27 @@
           "pageSize": {
             "type": "integer",
             "format": "int32",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "UserTypeDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "permissions": {
+            "type": "object",
+            "additionalProperties": {
+              "type": "boolean"
+            },
             "nullable": true
           }
         },
